[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-geocoder-tw"
version = "0.1.0"
description = "Offline reverse geocoder for Taiwan — maps GPS coordinates to street-level location names"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["gps", "geocoder", "taiwan", "openstreetmap", "reverse-geocoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "gps-bridge>=0.1.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "osmiter>=1.3.0",
]

[project.scripts]
gps-geocoder = "gps_geocoder_tw.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gps_geocoder_tw*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
