[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-geocoder"
version = "0.2.0"
description = "Offline map system with personal place markers and pluggable regional maps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["gps", "geocoder", "maps", "places", "openstreetmap", "reverse-geocoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
gps-geocoder = "gps_geocoder.main:cli"

[project.optional-dependencies]
tw = [
    "requests>=2.31.0",
    "osmiter>=1.3.0",
]
all = [
    "requests>=2.31.0",
    "osmiter>=1.3.0",
]
bridge = [
    "gps-bridge>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gps_geocoder*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
